--- a/src/views/initiate.html
+++ b/src/views/initiate.html
@@ -1,7 +1,8 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
-<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.css">
+<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.css" />
+<link rel="stylesheet" href="/stylesheets/form.css" />
 <style type="text/css">
 .vditor-reset {
   color: #212529;
