--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -1,7 +1,8 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
-<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
+<link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/flatpickr/4.6.13/flatpickr.min.css" />
+<link rel="stylesheet" href="/stylesheets/form.css" />
 {{/block}}
 
 {{block 'content'}}
