--- a/src/views/topicDetail.html
+++ b/src/views/topicDetail.html
@@ -1,5 +1,9 @@
 {{extend 'layout.html'}}
 
+{{block 'head'}}
+<link rel="stylesheet" href="/stylesheets/topicDetail.css" />
+{{/block}}
+
 {{block 'header'}}
 <div class="d-flex justify-content-center topicHeaderWrapper">
   <div class="topicHeader">
