--- a/src/views/topicList.html
+++ b/src/views/topicList.html
@@ -1,3 +1,7 @@
+{{block 'head'}}
+<link rel="stylesheet" href="/stylesheets/topicList.css" />
+{{/block}}
+
 {{if formatTopics?.length}}
 <div class="topicList list-group">
   {{each formatTopics}}
