--- a/src/views/header.html
+++ b/src/views/header.html
@@ -92,6 +92,7 @@
               </a>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item mb-1" href="/settings">Settings</a></li>
+                <li><a class="dropdown-item mb-1" href="/profile/{{ user.username }}">Profile</a></li>
                 <li><a class="dropdown-item mb-1" href="/myTopics">MyTopics</a></li>
                 <li><a class="dropdown-item mb-1" href="/myFavorites">MyFavorites</a></li>
                 <li><a class="dropdown-item mb-1" href="/topic/initiate">New Topic</a></li>
