--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -1,14 +1,15 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
+<link rel="stylesheet" href="/stylesheets/topicList.css" />
 <link rel="stylesheet" href="/stylesheets/profile.css" />
 {{/block}}
 
 {{block 'header'}}
 <div class="d-flex justify-content-center profileHeaderWrapper">
   <div class="profileHeader">
-    <h2><img src="{{ user?.avatar }}" alt="{{ user?.username }}" title="{{ user?.nickname }}" /></h2>
-    <h4>{{ user?.nickname }}</h4>
+    <h2><img src="{{ theUser?.avatar }}" alt="{{ theUser?.username }}" title="{{ theUser?.nickname }}" width="100" /></h2>
+    <h4 class="mt-3">{{ theUser?.nickname }}</h4>
   </div>
 </div>
 {{/block}}
