--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -10,6 +10,7 @@
   <div class="profileHeader">
     <h2><img src="{{ theUser?.avatar }}" alt="{{ theUser?.username }}" title="{{ theUser?.nickname }}" width="100" /></h2>
     <h4 class="mt-3">{{ theUser?.nickname }}</h4>
+    <p>{{ theUser?.bio }}</p>
   </div>
 </div>
 {{/block}}
