--- a/src/views/topicList.html
+++ b/src/views/topicList.html
@@ -6,7 +6,9 @@
 <div class="topicList list-group">
   {{each formatTopics}}
   <div class="d-flex list-group-item list-group-item-action gap-3">
-    <img src="{{ $value.user.avatar }}" alt="avatar" title="{{ $value.user.nickname }}" width="32" height="32" class="avatar flex-shrink-0">
+    <a href="/profile/{{ $value.user.username }}" title="{{ $value.user.nickname }}" class="avatar flex-shrink-0">
+      <img src="{{ $value.user.avatar }}" alt="{{ $value.user.username }}" width="32" height="32">
+    </a>
     <div class="d-flex w-100 justify-content-between">
       <a href="/topicDetail/{{ $value._id }}" class="topicSummary">
         <h5 class="mb-1">{{ $value.title }}</h5>
