--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <link
   rel="stylesheet"
-  href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
+  href="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
 />
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <link rel="shortcut icon" href="/images/nodejs.ico" type="image/x-icon" />
@@ -21,7 +21,7 @@
   </div>
 </section>
 
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+<script src="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
 {{block 'footer'}}
 {{/block}}
 </html>
