--- a/src/views/topicDetail.html
+++ b/src/views/topicDetail.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
+<!-- <link rel="stylesheet" href="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.css" /> -->
 <link rel="stylesheet" href="/stylesheets/topicDetail.css" />
 {{/block}}
 
@@ -96,9 +97,14 @@
 {{/block}}
 
 {{block 'footer'}}
-<script src="https://cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.js"></script>
+<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/lute/lute.min.js" id="vditorLuteScript"></script>
+<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/i18n/en_US.min.js" id="vditorI18nScripten_US"></script>
+<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/icons/ant.min.js" id="vditorIconScript"></script>
+<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.js"></script>
 <script>
   const content = document.querySelector('#content').value
-  Vditor.preview(document.querySelector('#topicContent'), content)
+  Vditor.preview(document.querySelector('#topicContent'), content, {
+    lang: 'en_US'
+  })
 </script>
 {{/block}}
