--- a/src/views/topicDetail.html
+++ b/src/views/topicDetail.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
-<!-- <link rel="stylesheet" href="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.css" /> -->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vditor@3.9.2/dist/index.css"> -->
 <link rel="stylesheet" href="/stylesheets/topicDetail.css" />
 {{/block}}
 
@@ -97,13 +97,11 @@
 {{/block}}
 
 {{block 'footer'}}
-<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/lute/lute.min.js" id="vditorLuteScript"></script>
-<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/i18n/en_US.min.js" id="vditorI18nScripten_US"></script>
-<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/js/icons/ant.min.js" id="vditorIconScript"></script>
-<script src="//cdn.bootcdn.net/ajax/libs/vditor/3.9.2/index.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vditor@3.9.2/dist/index.min.js"></script>
 <script>
   const content = document.querySelector('#content').value
   Vditor.preview(document.querySelector('#topicContent'), content, {
+    cdn: 'https://cdn.jsdelivr.net/npm/vditor@3.9.2',
     lang: 'en_US'
   })
 </script>
