--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,8 +1,5 @@
 <html lang="en">
-<link
-  rel="stylesheet"
-  href="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <link rel="shortcut icon" href="/images/nodejs.ico" type="image/x-icon" />
 {{block 'head'}}
@@ -21,7 +18,7 @@
   </div>
 </section>
 
-<script src="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 {{block 'footer'}}
 {{/block}}
 </html>
