--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 {{block 'head'}}
-<link rel="stylesheet" href="//cdn.bootcdn.net/ajax/libs/flatpickr/4.6.13/flatpickr.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css" />
 <link rel="stylesheet" href="/stylesheets/form.css" />
 {{/block}}
 
@@ -81,7 +81,7 @@
 {{/block}}
 
 {{block 'footer'}}
-<script src="//cdn.bootcdn.net/ajax/libs/flatpickr/4.6.13/flatpickr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.js"></script>
 <script>
 document.querySelector('#birthday').flatpickr()
 document.querySelector('#avatar').addEventListener('change', e => {
