--- a/src/views/topicList.html
+++ b/src/views/topicList.html
@@ -57,7 +57,7 @@
 {{/if}}
 
 {{block 'footer'}}
-<script src="//cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
 <script type="text/javascript">
   $(() => {
     $('nav.topicPagination').show()
