Update vditor cdn.

--- a/src/views/initiate.html
+++ b/src/views/initiate.html
@@ -65,7 +65,10 @@
       actions: [
         'desktop', 'tablet', 'mobile',
         // 'mp-wechat', 'zhihu'
-      ]
+      ],
+      theme: {
+        path: 'https://cdn.jsdelivr.net/npm/vditor@3.9.2/dist/css/content-theme'
+      }
     },
     // theme: 'dark',
     toolbar: [
