--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,6 +1,9 @@
 <html lang="en">
 {{block 'head'}}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css"
+/>
 <link rel="stylesheet" href="/stylesheets/style.css" />
 <link rel="stylesheet" href="/stylesheets/sign.css" />
 <link rel="shortcut icon" href="/images/nodejs.ico" type="image/x-icon" />
@@ -50,6 +53,6 @@
 {{/block}}
 
 {{block 'footer'}}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"></script>
 {{/block}}
 </html>
