--- a/src/views/initiate.html
+++ b/src/views/initiate.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/stylesheets/form.css" />
 <style type="text/css">
 .vditor-reset {
-  color: #212529;
+  color: rgba(33, 37, 41, .7);
   font-family: mononoki, Monaco, Consolas, 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 </style>
